<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FlowFormActivity">

    <TextView
        android:id="@+id/categoryform_edittext_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="564dp"
        android:fontFamily="@font/roboto"
        android:text="@string/new_money_flow"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/moneyflowform_edittext_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/name_moneyflow"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryform_edittext_title" />

    <EditText
        android:id="@+id/moneyflowform_edittext_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/value_moneyflow"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyflowform_edittext_name" />


    <Button
        android:id="@+id/moneyflowform_button_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register_moneyflow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyflow_radiogroup_type" />

    <Button
        android:id="@+id/flowmoneyform_datepickerbutton"
        style="?android:spinnerStyle"
        android:layout_width="227dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans"
        android:onClick="openDatePicker"
        android:text="JAN 01 2021"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/moneyflow_radiogroup_type"
        app:layout_constraintTop_toBottomOf="@+id/moneyflowform_edittext_value" />

    <RadioGroup
        android:id="@+id/moneyflow_radiogroup_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flowmoneyform_datepickerbutton">

        <RadioButton
            android:id="@+id/moneyflow_radiobutton_receita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Receita" />

        <RadioButton
            android:id="@+id/moneyflow_radiobutton_debito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Despesa" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>